# moex-pair-trading-screener

./: .env.example  .gitignore  DEVELOPMENT_PLAN.md  Dockerfile  Makefile  README.md  TEST_SUMMARY.md  docker-compose.yml  pyproject.toml  run_tests.sh
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  theme.ts
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  PairAnalyzer.tsx  PairsTable.tsx  PositionsTable.tsx  PriceChart.tsx  SignalsList.tsx  SpreadChart.tsx  StatsCard.tsx  ZScoreChart.tsx  index.ts
frontend/src/pages/: Charts.tsx  Dashboard.tsx  Pairs.tsx  Positions.tsx  Settings.tsx  Signals.tsx  index.ts
scripts/: run_all.sh
src/: __init__.py  main.py  screener.py
src/analysis/: __init__.py  pair_analyzer.py  signals.py  statistics.py
src/api/: __init__.py  server.py
src/broker/: __init__.py
src/config/: __init__.py  settings.py
src/notifications/: __init__.py  bot_handler.py  telegram.py
src/storage/: __init__.py  database.py
src/utils/: __init__.py  logger.py
src/visualization/: __init__.py  charts.py
src/worker/: __init__.py  data_collector.py
tests/: conftest.py  test_config.py  test_data_cache.py  test_data_collector.py  test_integration.py  test_logger.py  test_pair_analyzer.py  test_telegram.py  test_visualization.py
