[project]
name = "moex-pair-trading-screener"
version = "0.1.0"
description = "Pair trading screener for MOEX with Telegram notifications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "requests>=2.31.0",
    "websocket-client>=1.6.0",
    "python-telegram-bot>=20.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "APScheduler>=3.10.0",
    "structlog>=23.0.0",
    "pyarrow>=14.0.0",  # For Parquet file support in cache
    "matplotlib>=3.8.0",  # For data visualization
    "mplfinance>=0.12.0",  # For financial charts (candlestick)
    "fastapi>=0.109.0",  # For API server
    "uvicorn[standard]>=0.27.0",  # ASGI server
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

